src/test/deca/syntax/parser/invalid/decl_var_in_while.deca
// Parser test, can't declare a variable after a declaration ("while")

{

    while (x || y ){
        int z = 5;
    }
}